feat: add zsh zim starship

--- a/.chezmoidata/packages.toml
+++ b/.chezmoidata/packages.toml
@@ -27,6 +27,11 @@ brews = [
     "poetry",
     "pipx",
     "zoxide",
+    "starship",
+    "eza",
+    "bat",
+    "ripgrep",
+    "fzf",
 ]
 casks = []
 
